✨ feat: add admin dashboard

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -10,6 +10,9 @@
     --neutral-white-200: 204, 15%, 96%;
     --neutral-gray: 200, 4%, 44%;
 
+    --purple: 233, 93%, 66%;
+    --purple-light: 208, 92%, 95%;
+
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
